<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Use java class as a tag name -->
    <!--Change layout_height as according to your screen size!-->
    <com.example.mac.a.DrawingView
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/bt_clearAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:text="@string/clear"></Button>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/bt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:text="@string/save"></Button>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/bt_write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writetocloud"
                android:layout_margin="9sp">
            </Button>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>

